<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="ok">OK</string>
    <string name="permission_camera_rationale">Access to the camera is needed for detection</string>
    <string name="no_camera_permission">This application cannot run because it does not have the camera permission.  The application will now exit.</string>
    <string name="low_storage_error">Face detector dependencies cannot be downloaded due to low device storage</string>
    <string name="title_activity_main">Barcode Reader Sample</string>
    <string name="barcode_header">Click &quot;Read Barcode&quot; to read a barcode</string>
    <string name="read_barcode">Read Barcode</string>
    <string name="auto_focus">Auto Focus</string>
    <string name="use_flash">Use Flash</string>
    <string name="barcode_success">Barcode read successfully</string>
    <string name="barcode_failure">No barcode captured</string>
    <string name="barcode_error">"Error reading barcode: %1$s"</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="batch_File_txt">Batch File</string>
    <string name="notification_id_txt">Notification Id</string>
    <string name="type_txt">Type</string>
    <string name="validate_txt">Validate</string>
    <string name="gtin_txt">GTIN</string>
    <string name="serial_number_txt">Serial Number</string>
    <string name="batch_number_txt">Batch Number</string>
    <string name="expire_date_txt">Expire Date</string>
    <string name="cancel_btn_txt">Cancel</string>
    <string name="add_txt">Add</string>
    <string name="xd_txt">XD</string>
    <string name="bn_txt">BN</string>
    <string name="sn_txt">SN</string>
    <string name="scan_barcode_to_be_validated_txt">Scan barcode to be validated.</string>
    <string name="scan_txt">Scan</string>
</resources>
