<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorWhite">

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="4.5"
            android:background="@color/colorPrimary"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView

                android:id="@+id/GTINTxt"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1.5"
                android:gravity="center_vertical"
                android:maxLength="20"
                android:maxLines="1"
                android:paddingTop="1dp"
                android:text="GTIN"
                android:textSize="@dimen/_13ssp"
                android:paddingBottom="1dp"
                android:textColor="@color/colorWhite"
              />

            <TextView
                android:id="@+id/SerialNumberTxt"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center|center_vertical"
                android:maxLength="8"
                android:maxLines="1"
                android:paddingTop="1dp"
                android:paddingBottom="1dp"
                android:text="@string/sn_txt"
                android:textColor="@color/colorWhite"
                android:textSize="@dimen/_14ssp" />


            <TextView
                android:id="@+id/BatchNumberTxt"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center|center_vertical"
                android:maxLines="1"
                android:paddingTop="1dp"
                android:paddingBottom="1dp"
                android:text="@string/bn_txt"
                android:textColor="@color/colorWhite"
                android:textSize="@dimen/_13ssp"
                />

            <TextView
                android:id="@+id/expiredDateTxt"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center|center_vertical"
                android:maxLength="8"
                android:maxLines="1"
                android:paddingStart="16dp"
                android:paddingTop="1dp"
                android:paddingEnd="16dp"
                android:paddingBottom="1dp"
                android:text="@string/xd_txt"
                android:textColor="@color/colorWhite"
                android:textSize="@dimen/_13ssp" />
        </LinearLayout>
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/unitListRecyclerView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/showAddDialogBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/fab_margin"
            android:src="@drawable/ic_add_black_24dp"
            android:backgroundTint="@color/colorPrimary"
            app:tint="@color/colorWhite"
            android:tint="@color/colorPrimary"
            app:borderWidth="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>